# dynamic-movement-primitives

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  data_generator.py  robot_data_manipulator.py  ur.urdf
include/dmp/: dmp.hpp  dmp_base.hpp  multidof_periodic_dmp.hpp  periodic_dmp.hpp  quaternion.hpp  quaternion_periodic_dmp.hpp  quaternion_periodic_dmp2.hpp  quaternion_utils.hpp  traits.hpp  utils.hpp
include/dmp/basis_function/: basis_function.hpp  periodic_gaussian_kernel.hpp
include/dmp/basis_functions/: basis_function.hpp
include/dmp/class_traits/: integrable.hxx
include/dmp/data_handler/: data_serialiser.hpp  data_serialiser.hxx  timeseries.hpp  timeseries.hxx
include/dmp/manifolds/: cartesian_manifold.hpp  dummy_manifold.hpp  riemann_manifolds.hpp  rn_manifold.hpp  s3_manifold.hpp  se3_manifold.hpp
include/dmp/systems/: first_order_system.hpp  first_order_system.hxx  second_order_system.hpp  second_order_system.hxx
include/dmplib/: dmp.hpp
include/dmplib/basis_functions/: forcing_function.hpp
include/dmplib/class_traits/: integrable.hpp  integrable.hxx
include/dmplib/coordinate_systems/: coordinate_system.hpp  exponential_decay_cs.hpp  periodic_coordinate_system.hpp
include/dmplib/data_handler/: concepts.hpp  conversions.hpp  data_serialiser.hpp  data_serialiser.hxx  range_deserialise.hpp  range_serialise.hpp  range_type_data.hpp  timeseries.hpp  timeseries.hxx  traits.hpp
include/dmplib/learnable_functions/: learnable_function.hpp  weighted_basis_function.hpp
include/dmplib/learnable_functions/basis_functions/: basis_function.hpp  basis_function.hxx  gaussian_bf.hpp  radial_gaussian_bf.hpp
include/dmplib/manifolds/: aliases.hpp  cartesian_manifold.hpp  concepts.hpp  riemann_manifold.hpp  riemann_manifolds.hpp  rn_manifold.hpp  s3_manifold.hpp  se3_manifold.hpp  traits.hpp
include/dmplib/manifolds/domains/: domains.hpp  se3.hpp
include/dmplib/systems/: first_order_system.hpp  first_order_system.hxx  second_order_system.hpp
include/dmplib/transformation_systems/: second_order_tf.hpp  second_order_tf.hxx  transformation_system.hpp
include/dmplib/utils/: constants.hpp  macros.hpp  numeric_differentiate.hpp
src/: quaternion.cpp  quaternion_utils.cpp  s3_space.cpp  test.cpp
src/basis_function/: basis_function.cpp  periodic_gaussian_kernel.cpp
src/basis_functions/: gaussian_bf.cpp  radial_gaussian_bf.cpp
src/class_traits/: integrable.cpp
src/coordinate_systems/: coordinate_system.cpp  exponential_decay_cs.cpp  periodic_coordinate_system.cpp
src/data_container/: timeseries.cpp
src/data_handler/: conversions.cpp
src/dmp/: dmp_base.cpp  multidof_periodic_dmp.cpp  periodic_dmp.cpp  quaternion_periodic_dmp.cpp  quaternion_periodic_dmp.cpp.bkp  quaternion_periodic_dmp_v2.cpp  quaternion_utils.cpp  utils.cpp
src/manifold_traits/: s3_manifold.cpp
src/manifolds/: s3_manifold.cpp  se3_manifold.cpp
test/: 3dof_dmp_batch.cpp  3dof_dmp_incremental.cpp  CMakeLists.txt  angular_velocity.cpp  batch_dmp_robot.cpp  batch_dmp_saveriano.cpp  batch_dmp_synthetic.cpp  incremental_dmp_robot.cpp  incremental_dmp_saveriano.cpp  incremental_dmp_synthetic.cpp  multiple_dmp.cpp  multiple_dmp2.cpp  quat_saveriano_batch.cpp  quaternion_dmp.cpp  quaternion_dmp2.cpp  quaternion_dmp_batch.cpp  quaternion_dmp_batch_saveriano.cpp  quaternion_dmp_incremental.cpp  quaternion_dmp_incremental_saveriano.cpp  single_dmp.cpp  single_dmp_incremental.cpp
test/common/: defines.hpp.in  test_functions.cpp  test_functions.hpp
test/data/: robot.csv  saveriano.csv  synthetic.csv  training_data.csv
test/unit_test/: CMakeLists.txt  matlab.cpp  quaternions.cpp
tests/: CMakeLists.txt  data_io.cpp  manifolds.cpp  matplotlibcpp_test.cpp  test.cpp
